tests/rosetta/out/Smalltalk/count-in-octal-1.out
/tmp/count-in-octal-1.st:10: parse error, expected ']'
