tests/rosetta/out/Smalltalk/count-in-octal-1.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| toOct digits out v d main i |
toOct := [:n | ((n = 0)) ifTrue: [
'0'.
] .
digits := '01234567'.
out := ''.
v := n.
[(v > 0)] whileTrue: [.
d := (v % 8).
out := ((digits copyFrom: (d + 1) to: (d + 1)) + out).
v := (v / 8).
].
.
out. ].
main := [ 0 to: 128 do: [:i |.
Transcript show: (toOct value: i) printString; cr.
].
. ].
main value.
